--- a/counter-app/.github/workflows/lambda-code-test.yaml
+++ b/counter-app/.github/workflows/lambda-code-test.yaml
@@ -1,10 +1,12 @@
 name: Lambda python
 
-on: [push]
+on:
+  push:
+    branches:
+    - main
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
   steps:
