--- a/.github/workflows/lambda-code-test.yaml
+++ b/.github/workflows/lambda-code-test.yaml
@@ -15,7 +15,7 @@ jobs:
           python-version: "3.11"
       - name: Install dependencies
         run: |
-          python -m piüp install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
