--- a/.github/workflows/lambda-code-test.yaml
+++ b/.github/workflows/lambda-code-test.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
     - main
+
+env:
+  AWS_REGION: MY_AWS_REGION
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,6 +17,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
