--- a/.github/workflows/lambda-code-test.yaml
+++ b/.github/workflows/lambda-code-test.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
     - main
+env:
+  AWS_REGION: MY_AWS_REGION
 
 jobs:
   build:
@@ -20,7 +22,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: $AWS_REGION
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Install dependencies
         run: |
