--- a/.github/workflows/sam-deploy.yaml
+++ b/.github/workflows/sam-deploy.yaml
@@ -16,13 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-      - uses: aws-actions/setup-sam@v4
+      # - uses: actions/setup-python@v4
+      - uses: aws-actions/setup-sam@v2
+          with:
+            use-installer: true
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      - run: sam build
 
+      - run: sam build
       - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
