--- a/.github/workflows/sam-deploy.yaml
+++ b/.github/workflows/sam-deploy.yaml
@@ -15,9 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: aws-actions/setup-sam@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          use-installer: true
+          python-version: "3.11"
+      - uses: aws-actions/setup-sam@v2
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
