--- a/counter-app/template.yaml
+++ b/counter-app/template.yaml
@@ -26,7 +26,7 @@ Resources:
       Cors:
         AllowMethods: "'GET'"
         AllowHeaders: "'X-Forwarded-For'"
-        AllowOrigin: "'https://resume.collinsunaichi.co.uk/'"
+        AllowOrigin: "'https://resume.collinsunaichi.co.uk'"
         MaxAge: "'600'"
         AllowCredentials: true
   CounterFunction:
@@ -48,7 +48,7 @@ Resources:
       Environment:
         Variables:
           DYNAMODB_TABLE_NAME: CounterTable
-          ORIGIN_URL: https://resume.collinsunaichi.co.uk/
+          ORIGIN_URL: https://resume.collinsunaichi.co.uk
       Events:
         CounterApp:
           Type: Api 
